--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- React Devtools Safari -->
+    <script src="http://localhost:8097"></script>
+    <title>Magic 8 Ball</title>
   </head>
   <body>
     <div id="root"></div>
